--- a/css/home.css
+++ b/css/home.css
@@ -1,13 +1,13 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
-#map{
-  height: 94vh;
+#map {
+  height: 100vh;
 }
 nav {
   display: flex;
@@ -75,11 +75,11 @@ input[type="checkbox"] {
   nav .menu-btn i {
     display: block;
   }
-  
+
   #click:checked ~ .menu-btn i:before {
     content: "\f00d";
   }
-  
+
   nav ul {
     position: fixed;
     top: 80px;
@@ -91,16 +91,16 @@ input[type="checkbox"] {
     display: block;
     transition: all 0.3s ease;
   }
-  
+
   #click:checked ~ ul {
     left: 0;
   }
-  
+
   nav ul li {
     width: 100%;
     margin: 40px 0;
   }
-  
+
   nav ul li a {
     width: 100%;
     margin-left: -100%;
@@ -109,11 +109,11 @@ input[type="checkbox"] {
     font-weight: 500;
     transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   }
-  
+
   #click:checked ~ ul li a {
     margin-left: 0px;
   }
-  
+
   nav ul li a.active,
   nav ul li a:hover {
     background: none;
@@ -133,9 +133,3 @@ input[type="checkbox"] {
   padding: 0 30px;
   color: #1b1b1b;
 }
-
-.content div {
-  font-size: 40px;
-  font-weight: 700;
-}
-
